--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 :root {
-  --beige: oklab(93, -2, 12);
-  --lightgreen: oklab(89, -10, 22);
-  --green: oklab(75, -19, 35);
-  --tan: oklab(58, 10, 21);
-  --brown: oklab(39, 6, 10);
+  --beige: oklch(93.54% 0.032 95.41);
+  --lightgreen: oklch(80% 0.062 115.51);
+  --green: oklch(73% 0.11 121.23);
+  --tan: oklch(64.14% 0.061 59.48);
+  --brown: oklch(28% 0.03 52.65);
 }
 
 body {
   font-family: system-ui;
   background: var(--green);
+  background-image: url("papertexture.jpg");
+  background-size: 512px 512px;
+  background-repeat: repeat;
+  background-blend-mode: multiply;
   color: var(--brown);
 }
 
@@ -18,5 +22,16 @@ nav a {
   background: var(--brown);
   color: var(--lightgreen);
   padding-inline: 0.5em;
+  padding-block: 0.25lh;
+  border-radius: 0.75lh;
+}
+nav a:hover {
+  color: var(--beige);
+}
+
+main {
+  margin-top: 2lh;
+  padding: 1em;
+  background-color: var(--lightgreen);
   border-radius: 0.5lh;
 }
